@@ -12,12 +12,14 @@ public class BLLSimSharing {
         public static final String DROPPER = "dropper";
         public static final String DROPPER_BUTTON = "dropperButton";
         public static final String DROPPER_ICON = "dropperIcon";
+        public static final String EVAPORATION_SLIDER = "evaporationSlider";
         public static final String SHAKER = "shaker";
         public static final String SHAKER_ICON = "shakerIcon";
         public static final String SOLUTE_COMBO_BOX = "soluteComboBox";
     }
 
     public static class Parameters {
+        public static final String EVAPORATION_RATE = "evaporationRate";
         public static final String LOCATION_X = "locationX";
         public static final String LOCATION_Y = "locationY";
     }
