@@ -1,4 +1,5 @@
-12/20/11 FaucetNode fixes #3192 and #3193
+12/22/11 #3196, add sim-sharing to HSliderNode and VSliderNode
+12/21/11 FaucetNode fixes #3192 and #3193
 12/20/11 #3175, more refinements to sim-sharing drag handlers
 12/20/11 add PiccoloPhetResources, convenience singleton for accessing piccolo-phet jar resources
 12/19-11 #3189, Added "setCursor" method to CursorHandler
